--- a/personal-webpage/package.json
+++ b/personal-webpage/package.json
@@ -17,6 +17,7 @@
     "react-tsparticles": "^2.12.2",
     "tsparticles": "^2.12.0",
     "tsparticles-slim": "^2.12.0",
+    "typewriter-effect": "^2.21.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
