--- a/personal-webpage/package.json
+++ b/personal-webpage/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@mui/material": "^5.14.10",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -15,6 +16,7 @@
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
     "react-tsparticles": "^2.12.2",
+    "styled-components": "^6.0.8",
     "tsparticles": "^2.12.0",
     "tsparticles-slim": "^2.12.0",
     "typewriter-effect": "^2.21.0",
