--- a/personal-webpage/package.json
+++ b/personal-webpage/package.json
@@ -15,8 +15,12 @@
     "react-router-dom": "^6.16.0",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
+    "react-simple-image-slider": "^2.4.1",
+    "react-slick": "^0.29.0",
+    "react-slideshow-image": "^4.2.1",
     "react-tsparticles": "^2.12.2",
     "styled-components": "^6.0.8",
+    "swiper": "^6.8.4",
     "tsparticles": "^2.12.0",
     "tsparticles-slim": "^2.12.0",
     "typewriter-effect": "^2.21.0",
