--- a/personal-webpage/package.json
+++ b/personal-webpage/package.json
@@ -7,11 +7,13 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "expo-status-bar": "^1.7.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
-    "react-native": "^0.72.4",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-web": "^0.19.9",
     "react-router-dom": "^6.16.0",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
